css/main.css
/*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  box-sizing: border-box;
  color: #646A75;
  font-family: "proxima-nova", sans-serif;
  font-size: 1em;
  letter-spacing: 0.5px;
  line-height: 1.5;
}

*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   HackBU Hackathon 2015
   ========================================================================== */


.button {
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  display: inline-block;
  font-size: 0.875em;
  font-weight: 600;
  letter-spacing: 3px;
  line-height: 1;
  min-width: 13.6em;
  padding: 1em;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

.button--white {
  border-color: #fff;
  color: #fff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.button--white:hover {
  border-color: #ddd;
  color: #ddd;
}

.button--gray {
  border-color: #4D5666;
  color: #4D5666;
}

.button--gray:hover {
  border-color: #6F7888;
  color: #6F7888;
}

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 960px;
}


.section {
  padding: 6em 1em;
}

.section__title {
  color: #4D5666;
  font-family: "Karla", sans-serif;
  font-size: 2.6em;
  font-weight: 700;
  margin-top: 0;
}

.section__empty-text {
  font-size: 1.3em;
  padding: 4em 0;
  text-align: center;
}

.section__empty-text--light {
  color: #dedede;
}

.section__empty-text--dark {
  color: #b5b5b5;
}


.header {
  background: url("../img/header-background.jpg");
  background-size: cover;
  background-position: bottom;
  padding-top: 2em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.header__navigation {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.logo--header {
  height: 4.250em;
  margin: 0 1em;
  width: 4.063em;
}

.header__navigation__list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875em;
  font-weight: 600;
  letter-spacing: 3px;
  list-style: none;
  text-align: right;
  text-transform: uppercase;
  margin: 0;
  padding: 0;
}

.header__navigation__list li {
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.header__navigation__list a {
  color: #fff;
  display: block;
  padding: 1em;
  text-decoration: none;
}

.header__navigation__list__item:hover {
  border-top: 2px solid #FFF;
  margin-top: -2px;
  padding: 10px 0;
  text-transform: uppercase;

}

.header__cta__hackbu {
  display: block;
  margin: 9em auto 3em auto;
  max-height: 4.375em;
  max-width: 30.625em;
}

.header__cta__tagline {
  color: #fff;
  font-family: "Karla";
  font-size: 1.085em;
  font-weight: 500;
  letter-spacing: 1px;
  margin-bottom: 8em;
  text-align:center;
}

.header__cta__buttons {
  margin: 3em 0;
  text-align: center;

}

.header__cta__buttons__button {
  margin: 0 0.4em;
}


.about__info-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.about__info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}

.about__info__description {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
  font-size: 1.4em;
  letter-spacing: 0.5px;
  line-height: 1.7em;
}

.about__details {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.about__details__item {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

.about__graphic {
  margin-left: 6em;
  margin-top: 1.2em;
  width: 360px;
}

.about__details__item__title {
  border-top: 2px solid #40B26F;
  color: #40B26F;
  display: inline-block;
  font-family: "Karla";
  font-size: 0.9em;
  font-weight: bold;
  letter-spacing: 0.5px;
  margin-bottom: 0;
  padding-top: 4px;
  text-transform: uppercase;
}

.about__details__item__detail {
  font-size: 1.125em;
  letter-spacing: 0.5px;
  line-height: 1.500em;
}


.map {
  height: 400px;
}

.schedule__table-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 64.528px 0 0;
}

.schedule__table {
  width: 33.333333%;
}

.schedule__table__date {
  padding-bottom: 20px;
}

.schedule__table__date__day {
  border-top: 2px solid #40B26F;
  color: #40B26F;
  display: inline-block;
  font-family: "Karla";
  font-size: 0.9em;
  font-weight: bold;
  letter-spacing: 0.5px;
  margin-bottom: 0;
  padding: 4px 0;
  text-transform: uppercase;
}
/* ... */

